--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,9 +31,6 @@
   --chart-5: 27 87% 67%;
 }
 
-
-
-
 @layer base {
   * {
     @apply border-border;
@@ -41,4 +38,15 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+main {
+  transition-property: opacity, background, transform, filter;
+  transition-timing-function: ease-in-out;
+  transition-duration: 500ms;
+}
+
+.page-transition {
+  opacity: 0;
+  transform: translateY(40px);
 }
